workshop03/bggns1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggappv1-deploy
  labels:
    name: bggappv1-deploy
spec:
  selector:
    matchLabels:
      name: bggappv1-po
  replicas: 2
  template:
    metadata:
      name: bggappv1-po
      labels:
        name: bggappv1-po
    spec:
      containers:
      - name: bggappv1
        image: stackupiss/bgg-backend:v1
        imagePullPolicy: IfNotPresent
        args:
        - --prefix
        - /v1
        ports: 
        - containerPort: 3000 
        livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
        # readinessProbe:
        #     httpGet:
        #       path: /healthz
        #       port: 3000
 
---
apiVersion: v1
kind: Service
metadata:
  name: bggappv1-svc
  labels:
    name: bggappv1-svc
spec:
  type: ClusterIP
  selector:
    name: bggappv1-po
  ports:
  - port: 80
    targetPort: 3000
