workshop03/ws3-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bgg-ing
  labels:
    name: bgg-ing
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/defaultBackend: bggappv1-svc
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: bggappv1-svc
      port:
        number: 80
  rules:
  - host: bgg-146.190.195.34.nip.io
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: bggappv1-svc
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: bggappv2-svc
            port:
              number: 80
